# notifications

./: .editorconfig  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  TESTING.md  cspell.json  pyproject.toml
.github/workflows/: generate-pr-description.yml  gmail-to-line-notification.yml  labeler.yml  pre-commit.yml  test.yml
docs/: CLAUDE.ja.md  README.ja.md  TESTING.ja.md
docs/dev-diary/: 2025-07-03.md  2025-07-04.md  2025-07-05.md
scripts/: check_local_token.py  run_tests.sh  setup_oauth.py  test_local.py  test_token_scope.py
src/: config.py  gmail_notifier.py  slack_error_handler.py
tests/: conftest.py  test_config.py  test_gmail_notifier.py  test_slack_error_handler.py
tests/fixtures/: mock_data.py
